connection string updated

--- a/BsStoreApp/BsStoreApp/appsettings.json
+++ b/BsStoreApp/BsStoreApp/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlConnection": "DataSource = Server=(localdb)\\localDB1;Database=BsStoreApp;Trusted_Connection=True;"
+    "sqlConnection": "Data Source = (localdb)\\localDB1;Database=BsStoreApp;Trusted_Connection=True;"
 
   }
 }
